<!--
  ~ Copyright (C) 2021 The Android Open Source Project.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="app_name">HCLeltár</string>
    <string name="sell">Eladás</string>
    <string name="quantity">Mennyiség raktáron: </string>
    <string name="quantity_req">Mennyiség <font color='#FF0000'>*</font></string>
    <string name="item_name_req">Tétel Név <font color='#FF0000'>*</font></string>
    <string name="item_price_req">Tétel Ár <font color='#FF0000'>*</font></string>
    <string name="save_action">Mentés</string>
    <string name="showItemWithBarcod_action">Azonos vonalkód tétel</string>
    <string name="item_detail_fragment_title">Tétel Adatok</string>
    <string name="add_fragment_title">Tétel Hozzáadása</string>
    <string name="edit_fragment_title">Tétel Szerkesztése</string>
    <string name="price">Termék</string>
    <string name="quantity_in_stock">DB</string>
    <string name="item">ID</string>
    <string name="delete">Törlés</string>
    <string name="delete_question">Biztosan törölni szeretné?</string>
    <string name="no">Nem</string>
    <string name="yes">Igen</string>
    <string name="currency_symbol">Ft</string>
    <string name="edit_item">Tétel Szerkesztése</string>
    <string name="add_new_item">Új tétel felvitele</string>
    <string name="next">Tovább</string>
    <string name="csv_file_generated_text">CSV Generálva</string>
    <string name="csv_file_not_generated_text">CSV nem lett generálva</string>
    <string name="export_question">Biztosan exportálni akarja az adatbázist?</string>
    <string name="barcode">Vonalkód <font color='#FF0000'>*</font></string>

    <string-array name="roles_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <!-- Strings related to login -->
    <string name="prompt_email">Felhasználó</string>
    <string name="prompt_password">Jelszó</string>
    <string name="action_sign_in">Bejelentkezés</string>
    <string name="action_sign_in_short">Bejelentkezés</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Nem létező felhasználó!</string>
    <string name="invalid_password">Hibás jelszó!</string>
    <string name="login_failed">"Bejelentkezés sikertelen"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remember_me">Emlékezz rám</string>
    <string name="bejelentkezes">Bejelentkezés</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="newItem_question">Szeretne hozzáadni egy ehhez tartozó tételt?</string>

    <string name="activity_intent_filter_action">com.darryncampbell.datawedge.kotlin.ACTION</string>

    <string name="datawedge_intent_key_source">com.symbol.datawedge.source</string>
    <string name="datawedge_intent_key_label_type">com.symbol.datawedge.label_type</string>
    <string name="datawedge_intent_key_data">com.symbol.datawedge.data_string</string>
    <string name="DeleteConfirmation">Felvett termékek törlése. Biztosan folytatni szeretné?</string>
    <string name="ikerleltar">Ikerleltáros</string>
    <string name="nemikerleltar">Nem ikerleltáros</string>
    <string name="osszesmezo">Mezők helytelenül kitöltve!</string>
    <string name="itemnotfound">Nem talált termék</string>
    <string name="scanbarcode">Kérem olvassa be a vonalkódot</string>
    <string name="barcodenotfound">Nem található a vonalkód az adatbázisban.</string>
    <string name="nemnulla">A mennyiség nem lehet 0!</string>
    <string name="ftplogindetails">FTP bejelentkezési adatok</string>
    <string name="deletedb">Adatbázis Törlése</string>
    <string name="importdb">Adatbázis Import</string>
    <string name="ftpsettings">FTP Beállítások</string>
    <string name="loadfiles">Fájlok betöltése</string>
    <string name="loadusers">Load Users</string>
    <string name="user">Felhasználó</string>
    <string name="logout">Kijelentkezés</string>
    <string name="logout_question">Biztosan ki szeretne jelentkezni?</string>
    <string name="nouser">Nincs user bejelentkezve!</string>
    <string name="writedbfromfiles">Adatbázis írása a fájlokból. Biztosan folytatni szeretné? A folyamat akár 10 percig is tarthat.</string>
    <string name="állományoknemtalálh">Állományok nem találhatók a szerveren!</string>
    <string name="unsuccessfulloig">Bejelentkezés sikertelen</string>
    <string name="scannersettings">Scanner Beállítások</string>
    <string name="pathnotexist">Az elérési út nem létezik!</string>

    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />

    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
</resources>