<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.lomza.moviesroom.MainActivity">
    <item
        android:id="@+id/action_db_delete"
        android:icon="@drawable/ic_baseline_delete_24_gray"
        android:orderInCategory="1"
        android:title="@string/deletedb"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_db_import"
        android:icon="@drawable/ic_baseline_arrow_downward_24_gray"
        android:orderInCategory="2"
        android:title="@string/importdb"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_ftpsettings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:orderInCategory="3"
        android:title="@string/ftpsettings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_scannersettings"
        android:enabled="false"
        android:icon="@drawable/ic_baseline_settings_24"
        android:orderInCategory="4"
        android:title="@string/scannersettings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_baseline_arrow_back_ios_new_24"
        android:orderInCategory="5"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>
